# IoTMine

./: README.md  notes.txt
ex1/blinky/src/: main.c
ex1/gas_sensor/: CMakeLists.txt  prj.conf
ex1/gas_sensor/src/: main.c
ex1/rtt/: CMakeLists.txt  prj.conf
ex1/rtt/src/: main.c
ex1/sensor/: compile.sh  prj.conf
ex1/sensor/src/: main.c
ex1/trigger_temp_sensor/: CMakeLists.txt  prj.conf
ex1/trigger_temp_sensor/src/: main.c
